RESOLVED FIXED133894
REGRESSION (r167635): Reference leak in NetworkResourceLoader while loads are being deferred.
https://bugs.webkit.org/show_bug.cgi?id=133894
Summary REGRESSION (r167635): Reference leak in NetworkResourceLoader while loads are...
Andreas Kling
Reported 2014-06-13 20:21:03 PDT
Attachments
Patch (1.72 KB, patch)
2014-06-13 20:22 PDT, Andreas Kling
beidson: review+
Andreas Kling
Comment 1 2014-06-13 20:22:29 PDT
Andreas Kling
Comment 2 2014-06-13 23:31:43 PDT
Note You need to log in before you can comment on or make changes to this bug.