REGRESSION (r167635): Reference leak in NetworkResourceLoader while loads are being deferred. <https://webkit.org/b/133894> <rdar://problem/17312299>

Don't self-ref() in start() until we actually start; if page loads are being
deferred, start() will be called again once deferral stops.

This was causing us to leak the entire NetworkResourceLoader object graph.

Reviewed by Brady Eidson.

* NetworkProcess/NetworkResourceLoader.cpp:
(WebKit::NetworkResourceLoader::start):

Canonical link: https://commits.webkit.org/151840@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169964 268f45cc-cd09-0410-ab3c-d52691b4dbfc